trying to fix breadcrumb flex weirdness on mobile

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -58,6 +58,7 @@
 
 		.current-page {
 			color: $ubc-brand-blue;
+			flex-basis: fit-content;
 		}
 
 		a {
